deploy: 43a85f4fad3a994c0a24985abbc7677035352589

--- a/_modules/diffpy/fourigui/fourigui.html
+++ b/_modules/diffpy/fourigui/fourigui.html
@@ -335,7 +335,7 @@
 <a class="viewcode-back" href="../../../api/diffpy.fourigui.html#diffpy.fourigui.fourigui.Gui.load_cube">[docs]</a>
     <span class="k">def</span> <span class="nf">load_cube</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        loads 3D array in h5py file format from the filename input panel</span>
+<span class="sd">        TEST loads 3D array in h5py file format from the filename input panel</span>
 <span class="sd">        3D array is expected to be a reconstructed reciprocal scattering volume</span>
 <span class="sd">        when executed, one slide perpendicular to the selected axis will be plotted in the plot panel</span>
 <span class="sd">        &quot;&quot;&quot;</span>
